@@ -1,4 +1,5 @@
 December 2020 7.4
+  - Argond2id support for password hashes (#113)
   - 2-factor authentication:
    -> Support for Okta
    -> WebAuthn devices can be named in Self Service and WebAuthn tool
